src_inc = include_directories('.')

subdir('config')
subdir('asio')
subdir('async_task')
subdir('utils')

subdir('adc')
subdir('cable-monitor')
subdir('exit-air')
subdir('external')
subdir('fan')
subdir('hwmon-temp')
subdir('intel-cpu')
subdir('intrusion')
subdir('ipmb')
subdir('leakdetector')
subdir('mctp')
subdir('mcu')
subdir('nvidia-gpu')
subdir('nvme')
subdir('psu')
subdir('smbpbi')
subdir('tests')
